@@ -25,10 +25,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.apache.commons.io.IOUtils;
@@ -76,6 +79,7 @@ import org.glygen.tablemaker.exception.BadRequestException;
 import org.glygen.tablemaker.exception.BatchUploadException;
 import org.glygen.tablemaker.exception.DataNotFoundException;
 import org.glygen.tablemaker.exception.DuplicateException;
+import org.glygen.tablemaker.exception.GlymageFailedException;
 import org.glygen.tablemaker.exception.GlytoucanAPIFailedException;
 import org.glygen.tablemaker.exception.GlytoucanFailedException;
 import org.glygen.tablemaker.persistence.BatchUploadEntity;
@@ -93,23 +97,21 @@ import org.glygen.tablemaker.persistence.dao.CollectionSpecification;
 import org.glygen.tablemaker.persistence.dao.CollectionTagRepository;
 import org.glygen.tablemaker.persistence.dao.DatasetRepository;
 import org.glygen.tablemaker.persistence.dao.DatasetSpecification;
-import org.glygen.tablemaker.persistence.dao.DatatypeCategoryRepository;
 import org.glygen.tablemaker.persistence.dao.GlycanImageRepository;
 import org.glygen.tablemaker.persistence.dao.GlycanRepository;
 import org.glygen.tablemaker.persistence.dao.GlycanSpecifications;
 import org.glygen.tablemaker.persistence.dao.GlycanTagRepository;
 import org.glygen.tablemaker.persistence.dao.GlycoproteinRepository;
 import org.glygen.tablemaker.persistence.dao.GlycoproteinSpecification;
-import org.glygen.tablemaker.persistence.dao.NamespaceRepository;
 import org.glygen.tablemaker.persistence.dao.SettingRepository;
 import org.glygen.tablemaker.persistence.dao.TableReportRepository;
-import org.glygen.tablemaker.persistence.dao.TemplateRepository;
 import org.glygen.tablemaker.persistence.dao.UploadErrorRepository;
 import org.glygen.tablemaker.persistence.dao.UserRepository;
 import org.glygen.tablemaker.persistence.glycan.Collection;
 import org.glygen.tablemaker.persistence.glycan.CollectionTag;
 import org.glygen.tablemaker.persistence.glycan.CollectionType;
 import org.glygen.tablemaker.persistence.glycan.CompositionType;
+import org.glygen.tablemaker.persistence.glycan.Datatype;
 import org.glygen.tablemaker.persistence.glycan.Glycan;
 import org.glygen.tablemaker.persistence.glycan.GlycanCartoon;
 import org.glygen.tablemaker.persistence.glycan.GlycanFileFormat;
@@ -117,6 +119,7 @@ import org.glygen.tablemaker.persistence.glycan.GlycanInCollection;
 import org.glygen.tablemaker.persistence.glycan.GlycanInFile;
 import org.glygen.tablemaker.persistence.glycan.GlycanTag;
 import org.glygen.tablemaker.persistence.glycan.Metadata;
+import org.glygen.tablemaker.persistence.glycan.MetadataType;
 import org.glygen.tablemaker.persistence.glycan.RegistrationStatus;
 import org.glygen.tablemaker.persistence.glycan.UploadStatus;
 import org.glygen.tablemaker.persistence.protein.GlycanInSite;
@@ -131,8 +134,6 @@ import org.glygen.tablemaker.persistence.protein.SitePosition;
 import org.glygen.tablemaker.persistence.table.TableReport;
 import org.glygen.tablemaker.persistence.table.TableReportDetail;
 import org.glygen.tablemaker.service.AsyncService;
-import org.glygen.tablemaker.service.CollectionManager;
-import org.glygen.tablemaker.service.EmailManager;
 import org.glygen.tablemaker.service.ErrorReportingService;
 import org.glygen.tablemaker.service.GlycanManagerImpl;
 import org.glygen.tablemaker.service.ScheduledTasksService;
@@ -156,6 +157,7 @@ import org.glygen.tablemaker.view.UserStatisticsView;
 import org.glygen.tablemaker.view.dto.CollectionDTO;
 import org.glygen.tablemaker.view.dto.GlycanDTO;
 import org.glygen.tablemaker.view.dto.GlycanInSiteDTO;
+import org.glygen.tablemaker.view.dto.GlycanTagDTO;
 import org.glygen.tablemaker.view.dto.GlycoproteinDTO;
 import org.glygen.tablemaker.view.dto.SiteDTO;
 import org.json.JSONArray;
@@ -172,9 +174,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.domain.Sort.Direction;
 import org.springframework.data.domain.Sort.Order;
 import org.springframework.data.jpa.domain.Specification;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -186,11 +186,14 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.client.RestTemplate;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.databind.node.TextNode;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -208,7 +211,7 @@ public class DataController {
     
     static Logger logger = org.slf4j.LoggerFactory.getLogger(DataController.class);
     static BuilderWorkspace glycanWorkspace = new BuilderWorkspace(new GlycanRendererAWT());
-    private final static RestTemplate restTemplate = new RestTemplate();
+    public static Map<Long, String> metadataMapping = new HashMap<Long, String>();
     static {       
             glycanWorkspace.initData();
             // Set orientation of glycan: RL - right to left, LR - left to right, TB - top to bottom, BT - bottom to top
@@ -222,6 +225,18 @@ public class DataController {
 
             glycanWorkspace.setDisplay(GraphicOptions.DISPLAY_NORMALINFO);
             glycanWorkspace.setNotation(GraphicOptions.NOTATION_SNFG);
+            
+            metadataMapping.put(2L, "publication");
+            metadataMapping.put(3L, "species");
+            metadataMapping.put(4L, "strain");
+            metadataMapping.put(5L, "tissue");
+            metadataMapping.put(6L, "cellline");
+            metadataMapping.put(7L, "disease");
+            metadataMapping.put(12L, "experimentalTechnique");
+            metadataMapping.put(13L, "variant");
+            metadataMapping.put(16L, "contributor");
+            metadataMapping.put(17L, "comment");
+            metadataMapping.put(18L, "cellularComponent");
     }
     
     final private GlycanRepository glycanRepository;
@@ -233,17 +248,12 @@ public class DataController {
     final private AsyncService batchUploadService;
     final private GlycanManagerImpl glycanManager;
     final private UploadErrorRepository uploadErrorRepository;
-    final private EmailManager emailManager;
-    final private CollectionManager collectionManager;
     final private TableReportRepository reportRepository;
-    final private NamespaceRepository namespaceRepository;
     final private GlycanImageRepository glycanImageRepository;
     final private DatasetRepository datasetRepository;
     final private GlycoproteinRepository glycoproteinRepository;
     final private BatchUploadJobRepository batchUploadJobRepository;
     final private ErrorReportingService errorReportingService;
-    final private TemplateRepository templateRepository;
-	private final DatatypeCategoryRepository datatypeCategoryRepository;
 	final private SettingRepository settingRepository;
     
     @Value("${spring.file.imagedirectory}")
@@ -262,13 +272,12 @@ public class DataController {
     public DataController(GlycanRepository glycanRepository, UserRepository userRepository,
     		BatchUploadRepository uploadRepository, AsyncService uploadService, 
     		CollectionRepository collectionRepository, GlycanManagerImpl glycanManager, 
-    		UploadErrorRepository uploadErrorRepository, EmailManager emailManager, CollectionManager collectionManager, 
-    		TableReportRepository reportRepository, NamespaceRepository namespaceRepository, 
+    		UploadErrorRepository uploadErrorRepository, 
+    		TableReportRepository reportRepository, 
     		GlycanImageRepository glycanImageRepository, DatasetRepository datasetRepository, 
     		GlycoproteinRepository glycoproteinRepository, BatchUploadJobRepository batchUploadJobRepository, 
     		ErrorReportingService errorReportingService, GlycanTagRepository glycanTagRepository, 
-    		CollectionTagRepository collectionTagRepository, TemplateRepository templateRepository, 
-    		DatatypeCategoryRepository datatypeCategoryRepository, SettingRepository settingRepository) {
+    		CollectionTagRepository collectionTagRepository, SettingRepository settingRepository) {
         this.glycanRepository = glycanRepository;
 		this.glycanTagRepository = glycanTagRepository;
 		this.collectionRepository = collectionRepository;
@@ -278,17 +287,12 @@ public class DataController {
 		this.batchUploadService = uploadService;
 		this.glycanManager = glycanManager;
 		this.uploadErrorRepository = uploadErrorRepository;
-		this.emailManager = emailManager;
-		this.collectionManager = collectionManager;
 		this.reportRepository = reportRepository;
-		this.namespaceRepository = namespaceRepository;
 		this.glycanImageRepository = glycanImageRepository;
 		this.datasetRepository = datasetRepository;
 		this.glycoproteinRepository = glycoproteinRepository;
 		this.batchUploadJobRepository = batchUploadJobRepository;
 		this.errorReportingService = errorReportingService;
-		this.templateRepository = templateRepository;
-		this.datatypeCategoryRepository = datatypeCategoryRepository;
 		this.settingRepository = settingRepository;
     }
     
@@ -453,7 +457,8 @@ public class DataController {
                 		g.setErrorJson(e.getErrorJson());
                 	} catch (GlytoucanAPIFailedException e) {
                 		// API failure
-                		logger.error(e.getMessage());
+                		if (e.getCause() != null) logger.error(e.getMessage(), e.getCause());
+                		else logger.error(e.getMessage());
                 	}
                 	// save glycan with the updated information
                 	glycanRepository.save(g);
@@ -677,7 +682,8 @@ public class DataController {
         
         //populate errors/warnings
         for (CollectionView col: collections) {
-        	DatasetController.getErrorsForCollection(col, templateRepository, datatypeCategoryRepository, collectionRepository);
+        	//DatasetController.getErrorsForCollection(col, templateRepository, datatypeCategoryRepository, collectionRepository);
+        	DatasetController.validateMetadataForCollection(getClass(), col, collectionRepository);
         }
         return new ResponseEntity<>(new SuccessResponse(response, "collections retrieved"), HttpStatus.OK);
     }
@@ -797,7 +803,7 @@ public class DataController {
         
         List<CollectionView> collections = new ArrayList<>();
         for (Collection c: collectionsInPage.getContent()) {
-        	CollectionView cv = createCollectionView (c, imageLocation);
+        	CollectionView cv = createCollectionView (c, imageLocation, collectionRepository);
         	collections.add(cv);
         }
         
@@ -843,7 +849,8 @@ public class DataController {
         
         //populate errors/warnings
         for (CollectionView col: collections) {
-        	DatasetController.getErrorsForCollection(col, templateRepository, datatypeCategoryRepository, collectionRepository);
+        	//DatasetController.getErrorsForCollection(col, templateRepository, datatypeCategoryRepository, collectionRepository);
+        	DatasetController.validateMetadataForCollection(getClass(), col, collectionRepository);
         }
         return new ResponseEntity<>(new SuccessResponse(response, "collections of collections retrieved"), HttpStatus.OK);
     }
@@ -952,7 +959,7 @@ public class DataController {
         
         List<CollectionView> collections = new ArrayList<>();
         for (Collection c: collectionsInPage.getContent()) {
-        	CollectionView cv = createCollectionView (c, imageLocation);
+        	CollectionView cv = createCollectionView (c, imageLocation, collectionRepository);
         	collections.add(cv);
         }
         
@@ -981,12 +988,12 @@ public class DataController {
             throw new IllegalArgumentException ("Could not find the given collection " + collectionId + " for the user");
         }
         
-        CollectionView cv = createCollectionView (existing, imageLocation);
+        CollectionView cv = createCollectionView (existing, imageLocation, collectionRepository);
         
         return new ResponseEntity<>(new SuccessResponse<CollectionView>(cv, "collection retrieved"), HttpStatus.OK);
     }
     
-    static CollectionView createCollectionView (Collection collection, String imageLocation) {
+    static CollectionView createCollectionView (Collection collection, String imageLocation, CollectionRepository collectionRepository) {
     	CollectionView cv = new CollectionView();
         cv.setCollectionId(collection.getCollectionId());
     	cv.setName(collection.getName());
@@ -994,7 +1001,23 @@ public class DataController {
     		collection.setType(CollectionType.GLYCAN);
     	cv.setType(collection.getType());
     	cv.setDescription(collection.getDescription());
-    	if (collection.getMetadata() != null) cv.setMetadata(new ArrayList<>(collection.getMetadata()));
+    	if (collection.getMetadata() != null && !collection.getMetadata().isEmpty() && collection.getMetadataValues() == null) {
+    		// generate new JSON object
+    		cv.setMetadataValues (generateMetadataValues (collection.getMetadata()));
+    		collection.setMetadataValues(cv.getMetadataValues());
+    		// check if variant or cellline is in metadata values
+    		JsonNode variant = collection.getMetadataValues().findValue("variant");
+    		JsonNode cellline = collection.getMetadataValues().findValue("cellline");
+    		if (variant != null || cellline != null) {
+    			collection.setSampleType(MetadataType.BIOLOGICAL_SAMPLE_BACKGROUND_ALTERATION);
+    		} else {
+    			collection.setSampleType(MetadataType.BIOLOGICAL_SAMPLE);
+    		}
+    		collectionRepository.save(collection);
+    	} else if (collection.getMetadataValues() != null) {
+    		cv.setMetadataValues(collection.getMetadataValues());
+    		cv.setSampleType(collection.getSampleType());
+    	}
     	if (collection.getTags() != null) cv.setTags(new ArrayList<>(collection.getTags()));
     	if (collection.getType() == CollectionType.GLYCAN) {
 	    	if (collection.getGlycans() != null && !collection.getGlycans().isEmpty()) {
@@ -1034,7 +1057,25 @@ public class DataController {
 	    			c.setType(CollectionType.GLYCAN);
 	    		child.setType(c.getType());
 	    		child.setDescription(c.getDescription());
-	    		if (c.getMetadata() != null) child.setMetadata(new ArrayList<>(c.getMetadata()));
+	    		if (c.getMetadata() != null && !c.getMetadata().isEmpty() && c.getMetadataValues() == null) {
+	    			//generate new Json object
+	    			child.setMetadataValues (generateMetadataValues (c.getMetadata()));
+	        		c.setMetadataValues(child.getMetadataValues());
+	        		// check if variant or cellline is in metadata values
+	        		JsonNode variant = c.getMetadataValues().findValue("variant");
+	        		JsonNode cellline = c.getMetadataValues().findValue("cellline");
+	        		if (variant != null || cellline != null) {
+	        			c.setSampleType(MetadataType.BIOLOGICAL_SAMPLE_BACKGROUND_ALTERATION);
+	        		} else {
+	        			c.setSampleType(MetadataType.BIOLOGICAL_SAMPLE);
+	        		}
+	        		collectionRepository.save(c);
+	    			//child.setMetadata(new ArrayList<>(c.getMetadata()));
+	    		}
+	    		
+	    		if (c.getMetadataValues() != null) child.setMetadataValues(c.getMetadataValues());
+	        	child.setSampleType(c.getSampleType());
+	    		
 	    		if (c.getTags() != null) child.setTags(new ArrayList<>(c.getTags()));
 	    		if (c.getType() == CollectionType.GLYCAN) {
 	    	    	if (c.getGlycans() != null && !c.getGlycans().isEmpty()) {
@@ -1069,7 +1110,153 @@ public class DataController {
     	return cv;
     }
     
-    @Operation(summary = "Get collection of collections by the given id", security = { @SecurityRequirement(name = "bearer-key") })
+    private static JsonNode generateMetadataValues(java.util.Collection<Metadata> metadata) {
+        ObjectMapper mapper = new ObjectMapper();
+        ObjectNode json = mapper.createObjectNode();
+
+        for (Metadata m : metadata) {
+            Datatype datatype = m.getType();
+
+            if (datatype == null || datatype.getDatatypeId() == null) {
+                continue;
+            }
+
+            String fieldName = metadataMapping.get(datatype.getDatatypeId());
+
+            if (fieldName == null && datatype.getName() != null) {
+                fieldName = datatype.getName().toLowerCase();
+            }
+
+            boolean multiple = Boolean.TRUE.equals(datatype.getMultiple());
+
+            JsonNode valueNode;
+            if (fieldName.equals("contributor")) {
+            	valueNode = convertContributor(mapper, m.getValue());
+            }
+            else if (datatype.getNamespace() != null && Boolean.TRUE.equals(datatype.getNamespace().getHasId())) {
+                ObjectNode term = mapper.createObjectNode();
+                if (m.getValue() != null) {
+                    term.put("name", m.getValue());
+                }
+
+                if (m.getValueId() != null) {
+                    term.put("id", m.getValueId());
+                }
+
+                if (m.getValueUri() != null) {
+                    term.put("uri", m.getValueUri());
+                }
+                valueNode = term;
+            } else {
+                valueNode = TextNode.valueOf(m.getValue() == null ? "" : m.getValue());
+            }
+
+            if (multiple) {
+                ArrayNode array;
+                if (json.has(fieldName)) {
+                    array = (ArrayNode) json.get(fieldName);
+                } else {
+                    array = mapper.createArrayNode();
+                    json.set(fieldName, array);
+                }
+                array.add(valueNode);
+            } else {
+                json.set(fieldName, valueNode);
+            }
+        }
+        return json;
+    }
+    
+    public static JsonNode convertContributor(
+            ObjectMapper mapper,
+            String contributorString) {
+    	
+    	Set<String> userRoles = Set.of("curatedBy", "createdBy", "authoredBy", "contributedBy");
+
+        ObjectNode result = mapper.createObjectNode();
+
+        ArrayNode users = mapper.createArrayNode();
+        ArrayNode software = mapper.createArrayNode();
+
+        result.set("user", users);
+        result.set("software", software);
+
+        if (contributorString == null || contributorString.isBlank()) {
+            return result;
+        }
+
+        String[] entries = contributorString.split("\\|");
+
+        long userId = 1;
+        long softwareId = 1;
+
+        for (String entry : entries) {
+            int idx = entry.indexOf(':');
+            if (idx < 0) {
+                continue;
+            }
+
+            String role = entry.substring(0, idx).trim();
+            String value = entry.substring(idx + 1).trim();
+
+            if (!userRoles.contains(role)) {
+            	ObjectNode softwareNode = mapper.createObjectNode();
+
+                softwareNode.put("id", softwareId++);
+                softwareNode.put("role", role);
+
+                parseSoftware(value,softwareNode);
+                software.add(softwareNode);
+
+            } else {
+                ObjectNode userNode = mapper.createObjectNode();
+
+                userNode.put("id", userId++);
+                userNode.put("role", role);
+
+                parsePerson(value,userNode);
+                users.add(userNode);
+            }
+        }
+
+        return result;
+    }
+    
+    private static void parsePerson(String value,ObjectNode node) {
+    	Pattern p =Pattern.compile("^(.+?)\\s*\\((.*?)\\)$");
+        Matcher m = p.matcher(value);
+
+        if (!m.matches()) {
+            node.put("name", value);
+            return;
+        }
+
+        String name = m.group(1).trim();
+        String details = m.group(2).trim();
+        node.put("name", name);
+        String[] tokens = details.split(",");
+        for (String token : tokens) {
+            token = token.trim();
+            if (token.contains("@")) {
+                node.put("email", token);
+            } else {
+                node.put("organization", token);
+            }
+        }
+    }
+    
+    private static void parseSoftware(String value, ObjectNode node) {
+        Pattern p = Pattern.compile("^(.+?)\\s*\\((.*?)\\)$");
+        Matcher m = p.matcher(value);
+        if (m.matches()) {
+            node.put("name", m.group(1).trim());
+            node.put("url", m.group(2).trim());
+        } else {
+            node.put("name", value);
+        }
+    }
+
+	@Operation(summary = "Get collection of collections by the given id", security = { @SecurityRequirement(name = "bearer-key") })
     @GetMapping("/getcoc/{collectionId}")
     public ResponseEntity<SuccessResponse<CollectionView>> getCoCById(
     		@Parameter(required=true, description="id of the collection to be retrieved") 
@@ -1085,7 +1272,7 @@ public class DataController {
             throw new IllegalArgumentException ("Could not find the given collection " + collectionId + " for the user");
         }
         
-        CollectionView cv = createCollectionView(existing, imageLocation);
+        CollectionView cv = createCollectionView(existing, imageLocation, collectionRepository);
         
         return new ResponseEntity<>(new SuccessResponse<CollectionView>(cv, "collection retrieved"), HttpStatus.OK);
     }
@@ -1751,7 +1938,9 @@ public class DataController {
 	                	// report the error through email
 	                	ErrorReportEntity error = new ErrorReportEntity();
 	    				error.setMessage(e.getMessage());
-	    				error.setDetails("Error occurred in AddGlycan");
+	    				String additionalDetail = "";
+	    				if (e.getCause() != null) additionalDetail += e.getCause().getMessage(); 
+	    				error.setDetails("Error occurred in while adding glycan with sequence: " + glycan.getWurcs() + "\n" + additionalDetail);
 	    				error.setDateReported(new Date());
 	    				error.setTicketLabel("GlytoucanAPI");
 	    				errorReportingService.reportError(error);
@@ -1769,7 +1958,7 @@ public class DataController {
         Glycan added = glycanRepository.save(glycan);
         
         if (added != null) {
-            createImageForGlycan(imageLocation, scheme+glymage, added);
+            createImageForGlycan(imageLocation, scheme+glymage, added, errorReportingService);
             GlycanImageEntity imageEntity = new GlycanImageEntity();
             imageEntity.setGlycanId(added.getGlycanId());
             imageEntity.setGlytoucanId(added.getGlytoucanID());
@@ -1870,10 +2059,12 @@ public class DataController {
     		}
     	}
     	
+    	collection.setMetadataValues(c.getMetadataValues());
+    	collection.setSampleType(c.getSampleType());
         collection.setUser(user);
     	Collection saved = collectionRepository.save(collection);
     	
-    	if (c.getMetadata() != null) {
+    	/*if (c.getMetadata() != null) {
     		List<Metadata> metadataList = new ArrayList<>();
     		for (Metadata m: c.getMetadata()) {
     			Metadata newMetadata = null;
@@ -1900,8 +2091,9 @@ public class DataController {
     		}
     		saved.setMetadata(metadataList);
     		saved = collectionManager.saveCollectionWithMetadata(saved);
-    	}
-    	CollectionView sv = createCollectionView(saved, imageLocation);
+    	}*/
+    	
+    	CollectionView sv = createCollectionView(saved, imageLocation, collectionRepository);
     	return new ResponseEntity<>(new SuccessResponse<CollectionView>(sv, "collection added"), HttpStatus.OK);
     }
     
@@ -2170,7 +2362,7 @@ public class DataController {
         if (existing.isEmpty()) {
         	throw new EntityNotFoundException("collection with the given name does not exist!");
         }
-        CollectionView result = createCollectionView(existing.get(0), imageLocation);
+        CollectionView result = createCollectionView(existing.get(0), imageLocation, collectionRepository);
         return new ResponseEntity<>(new SuccessResponse<CollectionView>(result, "collection retrieved"), HttpStatus.OK);
     }
 
@@ -2299,6 +2491,8 @@ public class DataController {
 			break;
     	}
     	
+    	/*
+    	
     	if (existing.getMetadata() == null) {
     		existing.setMetadata(new ArrayList<>());
     	}
@@ -2362,9 +2556,13 @@ public class DataController {
     			}
     		}
     		UtilityController.getCanonicalForm (namespaceRepository, existing.getMetadata());
-    	}
-    	Collection saved = collectionManager.saveCollectionWithMetadata(existing);
-    	CollectionView cv = createCollectionView(saved, imageLocation);
+    	}*/
+    	existing.setMetadataValues(c.getMetadataValues());
+    	existing.setSampleType(c.getSampleType());
+    	//Collection saved = collectionManager.saveCollectionWithMetadata(existing);
+    	Collection saved = collectionRepository.save(existing);
+    	
+    	CollectionView cv = createCollectionView(saved, imageLocation, collectionRepository);
     	return new ResponseEntity<>(new SuccessResponse<CollectionView>(cv, "collection updated"), HttpStatus.OK);
     }
     
@@ -2436,7 +2634,7 @@ public class DataController {
     	}
     	
     	Collection saved = collectionRepository.save(existing);
-    	CollectionView cv = createCollectionView(saved, imageLocation);
+    	CollectionView cv = createCollectionView(saved, imageLocation, collectionRepository);
     	return new ResponseEntity<>(new SuccessResponse<CollectionView>(cv, "collection of collections updated"), HttpStatus.OK);
     }
     
@@ -3278,11 +3476,13 @@ public class DataController {
     	collection.setUser(user);
     	collection.setName(dto.getName());
     	collection.setDescription(dto.getDescription());
-    	collection.setMetadata(dto.getMetadata());   // clear the ids
+    	/*collection.setMetadata(dto.getMetadata());   // clear the ids
     	for (Metadata m: collection.getMetadata()) {
     		m.setMetadataId(null);
     		m.setCollection(collection);
-    	}
+    	}*/
+    	collection.setMetadataValues(dto.getMetadataValues());
+    	collection.setSampleType(dto.getSampleType());
     	collection.setTags(dto.getTags());
     	if (collection.getTags() != null) {
 	    	for (CollectionTag t: collection.getTags()) {
@@ -3368,19 +3568,20 @@ public class DataController {
 	public Glycan fromGlycanDTO (GlycanDTO dto, UserEntity user) {
 		Glycan glycan = new Glycan();
 		glycan.setDateCreated(dto.getDateCreated());
-		glycan.setDateCreated(dto.getDateCreated());
 		glycan.setGlycoCT(dto.getGlycoCT());
 		glycan.setGlytoucanHash(dto.getGlytoucanHash());
 		glycan.setGlytoucanID(dto.getGlytoucanID());
 		glycan.setGws(dto.getGws());
 		glycan.setWurcs(dto.getWurcs());
 		glycan.setMass(dto.getMass());
-		glycan.setTags(dto.getTags());
+		glycan.setTags(new ArrayList<GlycanTag>());
 		glycan.setUser(user);
-		if (glycan.getTags() != null) {
-	    	for (GlycanTag t: glycan.getTags()) {
-	    		t.setTagId(null);
-	    		t.setUser(user);
+		if (dto.getTags() != null) {
+	    	for (GlycanTagDTO t: dto.getTags()) {
+	    		GlycanTag tag = new GlycanTag();
+	    		tag.setLabel(t.getLabel());
+	    		tag.setUser(user);
+	    		glycan.getTags().add(tag);
 	    	}
     	}
 		return glycan;
@@ -3391,7 +3592,9 @@ public class DataController {
 	    dto.setName(collection.getName());
 	    dto.setDescription(collection.getDescription());
 	    dto.setType(collection.getType());
-	    dto.setMetadata(new ArrayList<>(collection.getMetadata()));
+	    //dto.setMetadata(new ArrayList<>(collection.getMetadata()));
+	    dto.setSampleType(collection.getSampleType());
+	    dto.setMetadataValues(collection.getMetadataValues());
 	    dto.setTags(new ArrayList<>(collection.getTags()));
 	    dto.setGlycans(collection.getGlycans().stream()
 	        .map(gc -> toGlycanDTO(gc.getGlycan(), gc.getDateAdded()))
@@ -3458,7 +3661,14 @@ public class DataController {
 		dto.setGws(glycan.getGws());
 		dto.setWurcs(glycan.getWurcs());
 		dto.setMass(glycan.getMass());
-		dto.setTags(new ArrayList<>(glycan.getTags()));
+		dto.setTags(new ArrayList<>());
+		if (glycan.getTags() != null) {
+	    	for (GlycanTag t: glycan.getTags()) {
+	    		GlycanTagDTO tag = new GlycanTagDTO();
+	    		tag.setLabel(t.getLabel());
+	    		dto.getTags().add(tag);
+	    	}
+    	}
 		return dto;
 	}
 
@@ -3922,7 +4132,9 @@ public class DataController {
         	// report the error through email
         	ErrorReportEntity error = new ErrorReportEntity();
 			error.setMessage(e.getMessage());
-			error.setDetails("Error occurred in parse and register glycan");
+			String additionalDetail = "";
+			if (e.getCause() != null) additionalDetail += e.getCause().getMessage(); 
+			error.setDetails("Error occurred in parse and register glycan with sequence: " + glycan.getWurcs() + "\n" + additionalDetail);
 			error.setDateReported(new Date());
 			error.setTicketLabel("GlytoucanAPI");
 			errorReportingService.reportError(error);
@@ -3939,7 +4151,7 @@ public class DataController {
         return sequence;
     }
     
-    public static void createImageForGlycan(String imageLocation, String glymageUrl, Glycan glycan) {
+    public static void createImageForGlycan(String imageLocation, String glymageUrl, Glycan glycan, ErrorReportingService errorReportingService) {
     	List<GlymageRequest> requests = new ArrayList<GlymageRequest>();
         GlycanCartoon cartoon = new GlycanCartoon();
         String wurcs = null;
@@ -3983,7 +4195,7 @@ public class DataController {
 	        	String compactUrl = glymageUrl + "/image/snfg/compact/" + glycan.getGlytoucanID() + ".png";
 	        	String extendedUrl = glymageUrl + "/image/snfg/extended/" + glycan.getGlytoucanID() + ".png";
 	        	try {
-		        	URL url = new URL(compactUrl);
+		        	URL url = URI.create(compactUrl).toURL();
 		        	HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 			        conn.setRequestMethod("GET");
 					conn.setConnectTimeout(3000); 
@@ -3996,7 +4208,7 @@ public class DataController {
 				        }
 			        }
 			        
-			        url = new URL(extendedUrl);
+			        url = URI.create(extendedUrl).toURL();
 		        	conn = (HttpURLConnection) url.openConnection();
 			        conn.setRequestMethod("GET");
 			        conn.setConnectTimeout(3000); 
@@ -4106,13 +4318,26 @@ public class DataController {
             } else {
                 logger.warn ("Glycan image cannot be generated for glycan " + glycan.getGlycanId());
             }
+        } catch (GlymageFailedException e) { 
+    		// received error message from glymage
+    		ErrorReportEntity error = new ErrorReportEntity();
+			error.setMessage("Error occurred while getting glycan images from Glymage");
+			String additionalDetails = "";
+			if (glycan.getGlytoucanID() != null) additionalDetails = "GlyTouCanId: " + glycan.getGlytoucanID();
+			String formattedJson = e.getResponse().toString(2);
+			error.setDetails(additionalDetails + "\n\nResponse from Glymage\n\n```" + formattedJson + "\n```");
+			//error.setDetails(e.getMessage() + "\n" + additionalDetails);
+			error.setDateReported(new Date());
+			error.setTicketLabel("Glymage");
+			errorReportingService.reportError(error);
         } catch (Exception e) {
         	logger.error ("Glycan image cannot be generated for glycan " + glycan.getGlycanId() + ". Reason: " + e.getMessage());
         			
         }
     }
     
-    private static void retrieveImages(String glymageUrl, Map<String, GlymageRequest> taskMap, GlycanCartoon cartoon) throws JsonProcessingException, IOException, InterruptedException {
+    private static void retrieveImages(String glymageUrl, Map<String, GlymageRequest> taskMap, GlycanCartoon cartoon) 
+    		throws InterruptedException, GlymageFailedException, IOException {
     	ObjectMapper mapper = new ObjectMapper();
         String jsonPayload = mapper.writeValueAsString(taskMap.keySet());
         
@@ -4146,12 +4371,17 @@ public class DataController {
 		
 		for (int i = 0; i < jsonArray.length(); i++) {
         	JSONObject resp = jsonArray.getJSONObject(i);
+        	String status = resp.getString("status");
+        	if (status != null && status.equalsIgnoreCase("error")) {
+        		logger.error ("Received an error message from glymage " + resp.toString());
+        		throw new GlymageFailedException("Received an error message from glymage ", resp);
+        	}
 			String imagePath = resp.getString("result");
 			String taskId = resp.getString("id");
 			GlymageRequest req = taskMap.get(taskId);
-			if (req != null) {
-				URL url2 = new URL(glymageUrl + "/" + imagePath);
-				HttpURLConnection conn = (HttpURLConnection) url2.openConnection();
+			if (req != null && imagePath != null && !imagePath.isEmpty()) {
+				URI uri = URI.create(glymageUrl).resolve(imagePath);
+				HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
 		        conn.setRequestMethod("GET");
 		        try (InputStream in = conn.getInputStream()) {
 		        	byte[] bytes = in.readAllBytes();
@@ -4168,6 +4398,8 @@ public class DataController {
 							cartoon.setCompactNoRedEnd(bytes);
 						}
 					}
+		        } finally {
+		        	conn.disconnect();
 		        }
 			}
 		}
